tests/snapshots/compile_snapshots__error_missing_trait_method.snap
---
source: tests/compile_snapshots.rs
expression: result
---
error: incomplete implementation of trait 'Greeter' for 'Person'
  help: missing required methods: greet
