tests/snapshots/compile_snapshots__error_non_exhaustive_bool.snap
---
source: tests/compile_snapshots.rs
expression: result
---
error: non-exhaustive match
  help: missing patterns: false
