tests/snapshots/compile_snapshots__error_non_exhaustive_match.snap
---
source: tests/compile_snapshots.rs
expression: result
---
error: non-exhaustive match
  help: missing patterns: Option::None
