tests/snapshots/compile_snapshots__error_type_mismatch.snap
---
source: tests/compile_snapshots.rs
expression: result
---
error: type mismatch in call to 'add'
  help: expected int, found string
